# chess

./: CMakeLists.txt  Chessman.cpp  Chessman.hpp  CommandInput.cpp  CommandInput.hpp  README.md  Structures.cpp  Structures.hpp  chessboard.cpp  chessboard.hpp  main.cpp  match.cpp  match.hpp
unit_tests/: CMakeLists.txt  test_bishop.cpp  test_king.cpp  test_knight.cpp  test_mate.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp  unit_tests.cpp
